--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,8 @@
                 <p><a href="{{ url_for('circuit_map') }}">The Map</a></p>
             </div>
         </div>
-
+  <!-- The div that holds our map -->
+  <div id="map"></div>
 
         <!-- Leaflet JS -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
@@ -52,6 +53,9 @@
 
         <!-- Our JavaScript -->
         <script type="text/javascript" src="../static/js/logic.js"></script>
+
+
+        <script src="../static/js/app.js"></script>
 
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
