remove superfluous index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,13 @@
 
 
 
-
+        <form action="../static/js/logic.js">
+            <label for="fname">Start Year:</label>
+            <input type="text" id="cyear1" name="cyear1"><br><br>
+            <!-- <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br><br> -->
+            <input type="submit" onclick="getCircuitURL()" value="Submit">
+          </form>
   <!-- The div that holds our map -->
   <div id="map"></div>
 
