--- a/templates/circuit.html
+++ b/templates/circuit.html
@@ -20,9 +20,13 @@
     </head>
 
 <body>
-
+    <div id="slider" style="top: 0px; right: 1px; margin: 10px 25px;"></div>
+    <div style="margin-right: auto; margin-left: auto; width: 90%; margin-bottom: 10px; text-align: center;">
+        <input type="number" min='1' max='35675999' id="input-number-min">
+        <input type="number" min='2' max='35676000' id="input-number-max">
+    </div>
   <!-- The div that holds our map -->
-  <div id="map"></div>
+    <div id="map"></div>
 
         <!-- Leaflet JS -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
