--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,43 +11,73 @@ html {
   height: 100%;
 }
 
-.leaflet-popup-content {
-  text-align: center;
-}
-/* CSS from the leaflet-choropleth documentation */
-.legend {
-  color: #555;
-  padding: 6px 8px;
-  font: 12px Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  background: white;
-  background: rgba(255, 255, 255, 0.8);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
+.navbar-brand{
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  padding: 1.5rem;
+  background-image: linear-gradient(to bottom right, rgb(255, 24, 1), rgb(143, 13, 1));
+
 }
 
-.legend ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  clear: both;
+#header {
+  border-bottom: 3px solid black;
 }
 
-.legend li {
-  display: inline-block;
-  width: 30px;
-  height: 22px;
+.box {
+  min-height: 50px;
+  padding: 5px;
+  margin: 2%;
+  font-weight: 800;
+  color: black;
 }
 
-.legend .min {
-  float: left;
-  padding-bottom: 5px;
+#Visualizations{
+  margin: 2%;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;   
 }
 
-.legend .max {
-  float: right;
+.graph {
+  border: 2px solid black;
 }
 
 h3 {
   text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+#dashboardSection {
+  border: 1;
+  border-radius: calc(5px);
+  border-color: #FF1801;
+}
+
+
+.articles {
+  /* top: 0px;
+  left: 0px; */
+  border: 1;
+  border-radius: calc(5px);
+  border-color: #FF1801;
+}
+
+
+.topTweets {
+  border: 1;
+  border-radius: calc(5px);
+  border-color: #FF1801;
+}
+
+
+.btn{
+  color: #FF1801;
 }
