--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
 
   <div class="bg-light" id = "Visualizations">
     <div class="container bg-light">
-        <h3 class = "text-center"><select id="selYear" onchange="getYear(this.value)"></select> Season Information</h3>
+        <select id="selYear" onchange="getYear(this.value)"></select><h3 class = "text-center">Season Information</h3>
         <hr>
         <div class="container">
             <div class="row">
