--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,7 @@
         <div class="container">
             <div class="row">
 
+                <!-- Demographics DropDown -->
                 <div class="col-sm-12 col-md-6 graph">
                     <h4>Driver Demographics</h4>
                     <div class="well" style="min-width: 225px;">
@@ -103,10 +104,11 @@
                       </div>
                 </div>
 
+                <!-- Standings...barchart? -->
                 <div class="col-sm-12 col-md-6 graph">
-                    <a href="humidity.html" class="text-decoration-none"><h4 class="text-center">vs. Humidity</h4></a>
-                    <a href="humidity.html"><img src="assets/images/HumVsLat.svg" class="img-fluid" title="Humidity vs Latitude" alt="Humidity vs Latitude"></a>
+                    <div id="bar"></div>
                 </div>
+                
                 <div class="col-sm-12 col-md-6 graph">
                     <a href="cloudiness.html" class="text-decoration-none"><h4 class="text-center">vs. Cloudiness</h4></a>                
                     <a href="cloudiness.html"><img src="assets/images/CloudVsLat.svg" class="img-fluid" title="Cloudiness vs Latitude" alt="Cloudiness vs Latitude"></a>
