--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,15 @@
         <div class="container">
             <div class="row">
 
+                <!-- Standings -->
+                <div class="col-sm-12 col-md-5 graph bg-light">
+                    <div id="bar"></div>
+                </div>
+
+                <div class="col-sm-12 col-md-5 graph bg-light">
+
+                </div>
+
                 <!-- Demographics DropDown -->
                 <div class="col-sm-12 col-md-5 graph bg-light">
                     <h4>Driver Demographics</h4>
@@ -104,18 +113,10 @@
                         <div id="driver-metadata" class="panel-body">
               <!-- metadata here -->
                         </div>
-                      </div>
+                      </div>                   
                 </div>
 
-                <!-- Standings...barchart? -->
-                <div class="col-sm-12 col-md-5 graph bg-light">
-                    <div id="bar"></div>
-                </div>
 
-                <div class="col-sm-12 col-md-5 graph bg-light">
-                    <a href="cloudiness.html" class="text-decoration-none"><h4 class="text-center">vs. Cloudiness</h4></a>                
-                    <a href="cloudiness.html"><img src="assets/images/CloudVsLat.svg" class="img-fluid" title="Cloudiness vs Latitude" alt="Cloudiness vs Latitude"></a>
-                </div>
                 <div class="col-sm-12 col-md-5 graph bg-light">
                     <a href="windspeed.html" class="text-decoration-none"><h4 class="text-center">vs. Latitude</h4></a>                 
                     <a href="windspeed.html"><img src="assets/images/WSpdVsLat.svg" class="img-fluid" title="Wind Speed vs Latitude" alt="Wind Speed vs Latitude"></a>
@@ -147,6 +148,9 @@
         <!-- Our JavaScript -->
         <script type="text/javascript" src="../static/js/logic.js"></script>
         <script src="../static/js/app.js"></script>
+
+        <!-- Plot.ly -->
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
