--- a/templates/index.html
+++ b/templates/index.html
@@ -114,8 +114,13 @@
                         <div class="panel-heading">
                         </div>
                         <div id="driver-metadata" class="panel-body">
+                            
               <!-- metadata here -->
                         </div>
+                        <div id="wiki_link">
+                            
+                        </div>
+                        <!-- <a href = "http://en.wikipedia.org/" id="wiki_link"> </a> -->
                       </div>                   
                 </div>
 
