--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
             <div class="row">
 
                 <!-- Standings -->
-                <div class="col-sm-12 col-md-5 graph bg-light">
+                <div class="col-sm-12 col-md-5 graph" id="driver_standings">
                     <div id="bar"></div>
                 </div>
 
