--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,9 @@
         <script type="text/javascript" src="../static/js/logic.js"></script>
         <script src="../static/js/app.js"></script>
 
+        <!-- require.js -->
+        <script type = "module" data-main = "../static/js/app.js" src = "../static/js/require.js" ></script>
+
         <!-- Plot.ly -->
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
