map shows, doesn't update

--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,6 @@
                         <div id="wiki_link">
                             
                         </div>
-                        <!-- <a href = "http://en.wikipedia.org/" id="wiki_link"> </a> -->
                       </div>                   
                 </div>
 
@@ -132,11 +131,11 @@
             </div>
         </div>
 
-
-
-
-
-
+        <div class="container">
+            <div class = "row map-graph">
+                    <div id="map" class = "leaflet-container leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex = "0" style = "width: 1000px; height: 400px; position:relative;"></div>
+            </div>
+        </div>
 
         
         <!-- Leaflet JS -->
@@ -156,9 +155,7 @@
         <!-- Our JavaScript -->
         <script type="text/javascript" src="../static/js/logic.js"></script>
         <script src="../static/js/app.js"></script>
-
-        <!-- require.js -->
-        <script type = "module" data-main = "../static/js/app.js" src = "../static/js/require.js" ></script>
+        <!-- <script src="../static/js/node_db.js"></script> -->
 
         <!-- Plot.ly -->
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
