--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,11 +5,26 @@ body {
 }
 
 /* Set map, body, and html to 100% of the screen size. */
-#map,
 body,
 html {
   height: 100%;
 }
+
+#map{
+  height: 100%;
+  /* border: 2px solid black;
+  margin: 2%;
+  border-radius: 2%  */
+}
+
+.map-graph {
+  border: 2px solid black;
+  min-height: 300pt;
+  max-width: 1000px;
+  margin: 2%;
+  border-radius: 2%
+}
+
 
 .navbar-brand{
   font-family:Georgia, 'Times New Roman', Times, serif;
