--- a/templates/circuit.html
+++ b/templates/circuit.html
@@ -20,13 +20,13 @@
     </head>
 
 <body>
-    <div id="slider" style="top: 0px; right: 1px; margin: 10px 25px;"></div>
+    <!-- <div id="slider" style="top: 0px; right: 1px; margin: 10px 25px;"></div>
     <div style="margin-right: auto; margin-left: auto; width: 90%; margin-bottom: 10px; text-align: center;">
         <input type="number" min='1' max='35675999' id="input-number-min">
         <input type="number" min='2' max='35676000' id="input-number-max">
-    </div>
+    </div> -->
   <!-- The div that holds our map -->
-    <div id="map"></div>
+  <div id="map" class = "leaflet-container leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex = "0" style = "position:relative;"></div>
 
         <!-- Leaflet JS -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
@@ -44,6 +44,11 @@
 
         <!-- Our JavaScript -->
         <script type="text/javascript" src="../static/js/logic.js"></script>
+        <script src="../static/js/app.js"></script>
+        <!-- <script src="../static/js/node_db.js"></script> -->
+
+        <!-- Plot.ly -->
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
