query works, map is closer

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,10 +96,11 @@
 
                 <!-- Standings -->
                 <div class="col-sm-12 col-md-5 graph" id="driver_standings">
-                    <div id="bar"></div>
+                    <div id="standings_bar"></div>
                 </div>
 
-                <div class="col-sm-12 col-md-5 graph bg-light">
+                <div class="col-sm-12 col-md-5 graph">
+                    <div id="pit_line"></div>
 
                 </div>
 
