--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-5 graph">
-                    <div id="pit_line"></div>
+                    <div id="pit_bar"></div>
 
                 </div>
 
