--- a/templates/index.html
+++ b/templates/index.html
@@ -125,9 +125,8 @@
                 </div>
 
 
-                <div class="col-sm-12 col-md-5 graph bg-light">
-                    <!-- <a href="windspeed.html" class="text-decoration-none"><h4 class="text-center">vs. Latitude</h4></a>                 
-                    <a href="windspeed.html"><img src="assets/images/WSpdVsLat.svg" class="img-fluid" title="Wind Speed vs Latitude" alt="Wind Speed vs Latitude"></a> -->
+                <div class="col-sm-12 col-md-5 graph">
+                    <div id="speed_bar"></div>
                 </div>
             </div>
         </div>
