--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
 
                 <!-- Names of Circuits with race number -->
                 <div class="col-sm-12 col-md-5 graph bg-light">
-                        
+                    <div id="circuit-list"></div>
                 </div>               
 
                 <div class="col-sm-12 col-md-5 graph">
