--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,17 @@ h3 {
   text-align: center;
 }
 
+#circuit-list{
+  height: 350pt;
+  Overflow-y: scroll;
+}
+
+
+#circuit-item {
+  /* color: blue; */
+  margin: 0;
+  padding: 0.1em;
+}
 
 
 
