--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,10 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="box skyblue">col-md-3</div>
+            <div class="box" id = "motorsport-news">
+                <p class = "text-center"><a href = "https://www.motorsport.com/f1/news/">Motorsport</a> Featured Article:</p>                  
+                <a href="{{ formula1.motorsport_link}}"><p class = "text-center">{{ formula1.motorsport_title }}</p> </a>                
+            </div>
           </div>
         </div>
   </div>
@@ -121,6 +124,7 @@
 
                 <!-- Names of Circuits with race number -->
                 <div class="col-sm-12 col-md-5 graph bg-light">
+                    <p>The following list can by used to match race numbers with the corresponding circuit in the next three graphs:</p>
                     <div id="circuit-list"></div>
                 </div>               
 
