--- a/templates/index.html
+++ b/templates/index.html
@@ -142,8 +142,10 @@
         </div>
 
         <div class="container">
-            <div class = "row map-graph">
-                    <div id="map" class = "leaflet-container leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex = "0" style = "width: 1000px; height: 400px; position:relative;"></div>
+            <div class = "row">
+                <div class = "col-sm-11 map-graph">
+                    <div id="map" class = "leaflet-container leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex = "0" style = "position:relative;"></div>
+                </div>
             </div>
         </div>
 
