Circuits list restrictions

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 
                 <!-- Names of Circuits with race number -->
                 <div class="col-sm-12 col-md-5 graph bg-light">
-                    <p>The following list can by used to match race numbers with the corresponding circuit for the next three graphs:</p>
+                    <p id="p-circuits"></p>
                     <div id="circuit-list"></div>
                 </div>               
 
