--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,35 +12,46 @@ html {
   padding:0;
 }
 
-.container{
+.row{
+  /* align-items: center; */
+  margin:0;  
+}
+.container-fluid{
   margin:0;
   padding:0;
+
 }
 
+#main-graphs {
+  background-color:black;
+  align-items: center;  
+}
 
 #map{
   height: 100%;
   width: auto;
-  /* border: 2px solid black;
-  margin: 2%;
-  border-radius: 2%  */
+  /* border: 2px solid black; */
+  /* margin: 0%; */
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .map-graph {
   overflow: hidden;
-  border: 2px solid black;
+  border: 4px solid black;
   min-height: 300pt;
   /* max-width: 1000px; */
-  margin: 1%;
-  border-radius: 2%
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2%;
+  padding: 0;
 }
-
 
 .navbar-brand{
   font-family:Georgia, 'Times New Roman', Times, serif;
   padding: 1.5rem;
   background-image: linear-gradient(to bottom right, rgb(255, 24, 1), rgb(143, 13, 1));
-
 }
 
 #header {
@@ -69,9 +80,15 @@ html {
 }
 
 #driver_standings {
+  margin-top: 2%;
   min-height: 375pt;
   /* min-width: 350pt; */
 }
+
+#driver-dropdown{
+  margin-top: 2%;
+}
+
 
 h3 {
   text-align: center;
@@ -89,9 +106,6 @@ h3 {
   padding: 0.1em;
 }
 
-#main-graphs {
-  background-color:black;
-}
 
 #leaflet-section{
   background-color:black;  
