--- a/templates/index.html
+++ b/templates/index.html
@@ -39,10 +39,7 @@
                 Additional Information
                 </a>
                 <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
-                    <!-- <li><a class="dropdown-item" href="maxtemp.html">Maximum Temperature</a></li>
-                    <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
-                    <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
-                    <li><a class="dropdown-item" href="windspeed.html">Wind Speed</a></li>                                     -->
+                    <li><a class="dropdown-item" href="history.html">Race History</a></li>
                 </ul>
             </li>
 
@@ -124,7 +121,7 @@
 
                 <!-- Circuit Map -->
             <div class = "row" id = "leaflet-section">
-                <div class = "col-sm-11 map-graph bg-white">
+                <div class = "col-sm-10 map-graph bg-white">
                     <div id="map" class = "leaflet-container leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex = "0" style = "position:relative;"></div>
                 </div>
             </div>
