--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 Additional Information
                 </a>
                 <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="history.html">Race History</a></li>
+                    <li><a class="dropdown-item" href="/history">Race History</a></li>
                 </ul>
             </li>
 
